<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Treasure Hunt</string>
    <string name="menuSettings">Settings</string>
    <string name="menuHelp">Help</string>
    <string name="menuAdvanced">Advanced</string>
      
<string name="play">Play</string>
<string name="statistics">Statistics</string>
<string name="logOut">Log Out</string>
<string name="myGames">My Games</string>
<string name="findGame">Find a Game</string>
<string name="login">Login</string>
<string name="username">Username:</string>
<string name="password">Password:</string>
<string name="select">Select:</string>
<string name="top10">10 most popular</string>
<string name="criteria">Search by criteria:</string>
<string name="or">Or</string>
<string name="searchBy">Search By:</string>
<string name="search">Search</string>
<string name="allPlayers">Show all players</string>
<string name="name">Name</string>
<string name="score">Score</string>
<string name="ranking">Ranking</string>
<string name="seeDetails">See Details</string>
<string name="delete">Delete</string>
<string name="updateMyGames">Update Games Online</string>
<string name="sendFinishedGames">Send Finished Games</string>
<string name="createUsername">Enter an email address.</string>
<string name="createPassword">Create a password </string>
<string name="noMyGames">You currently have no active games</string>
<string name="noGamesFound">Your search didn't match any games.</string>
<string name="submitNewUser">Submit.</string>
<string name="createUserHead">Welcome glory hunters</string>
<string name="loginNewUser">Create user</string>
<string name="requiresNetwork">Logging in might require network connection</string>
<string name="showHintOnMap">Show on map</string>
<string name="showCurrentHint">Show current hint</string>
</resources>
