<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20px"
        android:layout_marginTop="20px"
        android:layout_marginLeft="100px"
        android:text="@string/findGame"
    />
    
    <Button 
    	android:id="@+id/ButtonFindAGameScreenSearchMostPopular" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:layout_marginTop="20px"
    	android:text="@string/top10">
    </Button>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20px"
        android:layout_marginTop="30px"
        android:layout_marginBottom="30px"
        android:layout_marginLeft="150px"
        android:text="@string/or"
    />
    
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="110px"
        android:layout_marginBottom="10px"
        android:text="@string/criteria"
    />

	    
	    <EditText
	    	android:id="@+id/EditTextFindAGameScreenSearchfield"
	    	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
	    >
	    </EditText>
    
    <Button 
    	android:id="@+id/ButtonFindAGameScreenSearchCriteria" 
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:layout_marginTop="5px"
    	android:text="@string/search">
    </Button>
    
 </LinearLayout>
