<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="20px"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/plainbackground"
    >
    <TextView
	    	android:text="@string/createUserHead"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"	 
	    	android:textColor="#FFF"
	    	android:textSize="22px"	 
	    	android:gravity="center_horizontal"
	    	>   
	    	 </TextView>
    
    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:gravity="center_vertical"
    	android:layout_marginLeft="40px"
    	>
    	    	
  	    <TextView
	    	android:text="@string/createUsername"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"	 
	    	android:textColor="#FFF"
	    	android:textSize="18px"	   
	    >    </TextView>

	    <EditText
	    	android:id="@+id/EditTextCreateUserUsername"
	    	android:layout_width="235px"
	    	android:layout_height="wrap_content"
	    	android:maxLines="1"
	    	android:maxLength="45"     
	    >    </EditText>
	
	
	    <TextView
	    	android:text="@string/createPassword"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textColor="#FFF"
	    	android:textSize="18px"
	    >     </TextView>
	    
	    <EditText
	    	android:id="@+id/EditTextCreateUserPassword"
	    	android:layout_width="150px"
	    	android:layout_height="wrap_content"
	    	android:maxLines="1"
	    	android:maxLength="25"
	    	android:inputType="textPassword"
	    >    </EditText>
	   
	
	<Button 
	    	android:id="@+id/ButtonCraeteUserSubmit"
	    	android:layout_width="100px"
	    	android:layout_height="wrap_content"
	    	android:text="@string/submitNewUser"
	    	android:textColorHighlight="#d6dd0f" android:editable="true" 
	    	android:enabled="true"
	    	>	</Button>
</LinearLayout>
 </LinearLayout>